--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Lesson1</title>
 </head>
 <body>
-  <img src="/img/logo.jpg" alt="logo: WAYUP">
+  <img src="img/logo.jpg" alt="logo: WAYUP">
   <h1>Вступление H1</h1>
   <p>Это текст моего первого домашнего задания.</p>
   <p>Не верится, но мне уже удается писать свой первый код на HTML</p>
