--- a/index.html
+++ b/index.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lesson1</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  <img src="img/logo.jpg" alt="logo: WAYUP">
-  <h1>Вступление H1</h1>
-  <p>Это текст моего первого домашнего задания.</p>
-  <p>Не верится, но мне уже удается писать свой первый код на HTML</p>
-  <h2>Что дальше? H2</h2>
-  <p>Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a href="https://www.google.com/" alt="Link Google" target="_blank">Прочитать больше в Google</a></p>
-<h2>Что я буду уметь? H2</h2>
-<p>Я смогу создавать вот такие замечательные формы:</p>
-<form action="#">
-  <input type="text" placeholder="Имя " required >
-  <input type="email" placeholder="E-mail"required >
-  <input type="tel"placeholder="Телефон" required >
-  <button type="submit">Отправить форму</button>
-</form>
-<p>А также, я научилась создать списки:</p>
-<ul>
-  <li>С одним пунктом</li>
-  <li>С несколькими пунктами</li>
-  <li>И даже с тремя отдельными пунктами</li>
-</ul>
-<h2>Отличное начало! H2</h2>
-<a href="https://wayup.in/cabinet/course10/unit1/lesson1" alt="first lesson Link">Перейти на страницу первого занятия курса</a>
+  <img src="img/logo.jpg" alt="logo: WAYUP" class="logo">
+  <h1 class="red">Вступление H1</h1>
+  <p class="paragrap-1">Это текст моего второго домашнего задания.</p>
+   <br><br>
+  <p>Не верится, но мне уже удается писать свой <span class="red">первый код на HTML</span></p>
+  <h2 class="green">Что дальше? H2</h2>
+  <p>Дальше, я буду получать все больше и больше опыта в разработке сайтов, чтобы достичь новых вершин! <a
+      href="https://www.google.com/" alt="Link Google" target="_blank">Прочитать больше в Google</a></p>
+  <h2 class="green padding">Что я буду уметь? H2</h2>
+  <p class="pl">Я смогу создавать вот такие замечательные формы:</p>
+  <form action="#">
+    <input type="text" placeholder="Имя " required >
+    <input type="email" placeholder="E-mail" required >
+    <input type="tel" placeholder="Телефон" required >
+    <button type="submit">Отправить форму</button>
+  </form>
+  <p>А также, я научилась создать списки:</p>
+  <ul>
+    <li class="border">С одним пунктом</li>
+    <li class="border">С несколькими пунктами</li>
+    <li class="border">И даже с тремя отдельными пунктами</li>
+  </ul>
+  <h2 class="green">Отличное начало! H2</h2>
+  <a href="https://wayup.in/cabinet/course10/unit1/lesson1" alt="first lesson Link">Перейти на страницу первого занятия
+    курса</a>
 </body>
 </html>
